[package]
name = "space-mech-final"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
big_space = { version = "0.9.1", features = ["debug", "camera"] }
bevy_math = "0.15.3"
turborand = "0.10.1"
rayon = "1.10.0"
chrono = "0.4.40"
lambert-bate = "0.1.0"

[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 3